# local-aws-kinesis-playground

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS
infra/docker/python-producer/: Dockerfile
infra/init-scripts/localstack/: create-streams.sh
src/consumer/python/: consumer.py
src/consumer/typescript/: consumer.ts
src/producer/python/: producer.py
